[gd_scene load_steps=41 format=3 uid="uid://dphq852upsasd"]

[ext_resource type="Script" path="res://Scenes/Main/Main.gd" id="1_bqq6y"]
[ext_resource type="Theme" uid="uid://ca6asxvhlbu51" path="res://Art/Themes/MainMenuTheme.tres" id="1_tshxl"]
[ext_resource type="Script" path="res://Scenes/Main/FPS.gd" id="2_h7wcs"]
[ext_resource type="Texture2D" uid="uid://dm1j216n0fuwj" path="res://Art/Background/livingRoomDay-1600.png" id="2_r2e40"]
[ext_resource type="Script" path="res://Scenes/Main/RemainingWalks.gd" id="3_3fb26"]
[ext_resource type="Script" path="res://Scenes/Main/DayLabel.gd" id="5_3yben"]
[ext_resource type="Script" path="res://Scenes/Main/PlayerInventory.gd" id="6_cueot"]
[ext_resource type="Script" path="res://Scenes/Main/Player.gd" id="7_cp3kk"]
[ext_resource type="Script" path="res://Scenes/Main/GoldLabel.gd" id="8_8l10c"]
[ext_resource type="Script" path="res://Scenes/UI/Actions/Rest.gd" id="12_ktm7g"]
[ext_resource type="Script" path="res://Scenes/UI/Actions/Lessons.gd" id="12_sb63u"]
[ext_resource type="Script" path="res://Scenes/Main/BackgroundInventory.gd" id="12_thnkb"]
[ext_resource type="Script" path="res://Scenes/Main/SkillInventory.gd" id="13_tkqcx"]
[ext_resource type="Material" uid="uid://bw7t51yw4ntnn" path="res://Scenes/Main/TransparencyShader.tres" id="16_3c6c7"]
[ext_resource type="PackedScene" uid="uid://dwiyx4g8dr4ik" path="res://Scenes/UI/Actions/Animation.tscn" id="17_5xmvy"]
[ext_resource type="PackedScene" uid="uid://do8baktjfoyyj" path="res://Scenes/Main/count.tscn" id="17_im62w"]
[ext_resource type="VideoStream" path="res://Characters/Mao/Videos/special_01.ogv" id="18_q463u"]
[ext_resource type="Script" path="res://Scenes/UI/Actions/Work.gd" id="20_derlk"]
[ext_resource type="Script" path="res://Scenes/UI/Actions/Walk.gd" id="21_psxgd"]
[ext_resource type="Script" path="res://Scenes/UI/Actions/Shop.gd" id="22_prvwr"]
[ext_resource type="Script" path="res://Scenes/Main/StatsDisplay.gd" id="25_7vaom"]
[ext_resource type="Texture2D" uid="uid://c8pwpm2tkgmmu" path="res://Art/UI/UI_Mobile_By_VerzatileDev/Mobile_UI_Indivudually/UI_MobileIndivudals_g995.png" id="25_dofej"]
[ext_resource type="PackedScene" uid="uid://bulj0juk270wj" path="res://Scenes/Dialogic/DialogicViewport.tscn" id="26_25225"]
[ext_resource type="Texture2D" uid="uid://b1napua58pspf" path="res://Art/Kittens/Sleeping-Kittens-grey/grey-kitten2.png" id="27_wb2qf"]

[sub_resource type="LabelSettings" id="LabelSettings_qc06n"]
font_size = 28
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_icocv"]
font_size = 28
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k8ogb"]
font_size = 22
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_snc6d"]
blend_mode = 4
light_mode = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_ltday"]
viewport_path = NodePath("Ui/PlayerControl/Player/PlayerSprite/PlayerModel")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fwgbm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_in7em"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_80aij"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_en1ia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_apv3e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nc7hd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2w8ax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h24mw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46vva"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x7l7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r8es6"]

[node name="Main" type="Control" groups=["Main"]]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_tshxl")
script = ExtResource("1_bqq6y")

[node name="FPS" type="Label" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = 10.0
offset_top = 63.0
offset_right = 144.0
offset_bottom = 113.0
text = "FPS"
label_settings = SubResource("LabelSettings_qc06n")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_h7wcs")

[node name="RemainingWalks" type="Label" parent="."]
texture_filter = 4
layout_mode = 0
offset_left = 10.0
offset_top = 126.0
offset_right = 144.0
offset_bottom = 176.0
text = "Walks"
label_settings = SubResource("LabelSettings_qc06n")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_3fb26")

[node name="GUI (Mouse Ignore)" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 180.0
offset_right = 1420.0
offset_bottom = 160.0
mouse_filter = 2

[node name="Counters" type="HBoxContainer" parent="GUI (Mouse Ignore)"]
layout_mode = 2

[node name="mood" parent="GUI (Mouse Ignore)/Counters" instance=ExtResource("17_im62w")]
layout_mode = 2
size_flags_horizontal = 3

[node name="level" parent="GUI (Mouse Ignore)/Counters" instance=ExtResource("17_im62w")]
layout_mode = 2
size_flags_horizontal = 3

[node name="experience" parent="GUI (Mouse Ignore)/Counters" instance=ExtResource("17_im62w")]
layout_mode = 2
size_flags_horizontal = 3

[node name="scholarship" parent="GUI (Mouse Ignore)/Counters" instance=ExtResource("17_im62w")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Ui" type="CanvasLayer" parent="."]

[node name="BackgroundLayer" type="CanvasLayer" parent="Ui"]
layer = -1

[node name="Background" type="Sprite2D" parent="Ui/BackgroundLayer"]
texture = ExtResource("2_r2e40")
centered = false
offset = Vector2(0, -400)

[node name="GoldLabelContainer" type="MarginContainer" parent="Ui"]
offset_right = 145.0
offset_bottom = 59.0
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GoldLabel" type="Label" parent="Ui/GoldLabelContainer"]
texture_filter = 4
layout_mode = 2
text = "GoldLabel"
label_settings = SubResource("LabelSettings_icocv")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("8_8l10c")

[node name="DayLabelContainer" type="MarginContainer" parent="Ui"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -64.0
offset_bottom = 64.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DayLabel" type="Label" parent="Ui/DayLabelContainer"]
layout_mode = 2
text = "DayLabel"
label_settings = SubResource("LabelSettings_k8ogb")
script = ExtResource("5_3yben")

[node name="PlayerControl" type="Control" parent="Ui"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Player" type="Node2D" parent="Ui/PlayerControl" groups=["Live2DPlayer"]]
script = ExtResource("7_cp3kk")

[node name="Gray" type="Sprite2D" parent="Ui/PlayerControl/Player"]
visible = false
position = Vector2(-450, -270)
scale = Vector2(0.15, 0.15)
texture = ExtResource("27_wb2qf")

[node name="PlayerInventory" type="Control" parent="Ui/PlayerControl/Player"]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 310.0
offset_top = -350.0
offset_right = 660.0
grow_vertical = 0
script = ExtResource("6_cueot")

[node name="BackgroundInventory" type="Control" parent="Ui/PlayerControl/Player"]
visible = false
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -660.0
offset_top = -350.0
offset_right = -310.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("12_thnkb")

[node name="SkillInventory" type="Control" parent="Ui/PlayerControl/Player"]
visible = false
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -660.0
offset_top = -350.0
offset_right = -310.0
grow_vertical = 0
script = ExtResource("13_tkqcx")

[node name="PlayerSprite" type="Sprite2D" parent="Ui/PlayerControl/Player"]
material = SubResource("CanvasItemMaterial_snc6d")
texture = SubResource("ViewportTexture_ltday")
centered = false
offset = Vector2(-350, -700)

[node name="PlayerModel" type="GDCubismUserModel" parent="Ui/PlayerControl/Player/PlayerSprite"]
assets = "res://addons/gd_cubism/example/res/live2d/mao_pro_en/runtime/mao_pro.model3.json"
playback_process_mode = 2
anim_loop = false
anim_loop_fade_in = true
anim_expression = ""
anim_motion = ""
ParamAngleX = 0.0
ParamAngleY = 0.0
ParamAngleZ = 0.0
ParamCheek = 0.0
ParamFaceInkOn = 0.0
ParamEyeLOpen = 1.0
ParamEyeLSmile = 0.0
ParamEyeLForm = 0.0
ParamEyeROpen = 1.0
ParamEyeRSmile = 0.0
ParamEyeRForm = 0.0
ParamEyeBallX = 0.0
ParamEyeBallY = 0.0
ParamEyeBallForm = 0.0
ParamEyeEffect = 0.0
ParamBrowLY = 0.0
ParamBrowRY = 0.0
ParamBrowLX = 0.0
ParamBrowRX = 0.0
ParamBrowLAngle = 0.0
ParamBrowRAngle = 0.0
ParamBrowLForm = 0.0
ParamBrowRForm = 0.0
ParamA = 0.0
ParamI = 0.0
ParamU = 0.0
ParamE = 0.0
ParamO = 0.0
ParamMouthUp = 1.0
ParamMouthDown = 0.0
ParamMouthAngry = 0.0
ParamMouthAngryLine = 0.0
ParamBodyAngleX = 0.0
ParamBodyAngleY = 0.0
ParamBodyAngleZ = 0.0
ParamBreath = 0.0
ParamLeftShoulderUp = 0.0
ParamRightShoulderUp = 0.0
ParamArmLA01 = 0.0
ParamArmLA02 = 0.0
ParamArmLA03 = 0.0
ParamHandLA = 0.0
ParamArmRA01 = 0.0
ParamArmRA02 = 0.0
ParamArmRA03 = 0.0
ParamWandRotate = 0.0
ParamHandRA = 0.0
ParamInkDrop = 0.0
ParamInkDropRotate = 0.0
ParamInkDropOn = 0.0
ParamArmLB01 = 0.0
ParamArmLB02 = 0.0
ParamArmLB03 = 0.0
ParamHandLB = 0.0
ParamHatForm = 0.0
ParamArmRB01 = 0.0
ParamArmRB02 = 0.0
ParamArmRB02Y = 0.0
ParamArmRB03 = 0.0
ParamHandRB = 0.0
ParamAllX = 0.0
ParamAllY = 0.0
ParamAllRotate = 0.0
ParamHairFront = 0.0
ParamHairSideL = 0.0
ParamHairSideR = 0.0
ParamHairBack = 0.0
ParamHairBackR = 0.0
ParamHairBackL = 0.0
ParamoHairMesh = 0.0
ParamHairFrontFuwa = 0.0
ParamHairSideFuwa = 0.0
ParamHairBackFuwa = 0.0
ParamWing = 0.0
ParamRibbon = 0.0
ParamHatBrim = 0.0
ParamHatTop = 0.0
ParamAccessory1 = 0.0
ParamAccessory2 = 0.0
ParamString = 0.0
ParamRobeL = 0.0
ParamRobeR = 0.0
ParamRobeFuwa = 0.0
ParamHeartMissOn = 0.0
ParamHeartBackMissOn = 0.0
ParamHeartColorRainbow = 0.0
ParamHeartHealOn = 0.0
ParamHeartBackHealOn = 0.0
ParamHeartColorHeal = 0.0
ParamHeartDrow = 0.0
ParamHeartSize = 0.0
ParamHeartColorLight = 0.0
ParamWandInkColorRainbow = 0.0
ParamWandInkColorHeal = 0.0
ParamWandInk = 0.0
ParamSmokeOn = 0.0
ParamSmoke = 0.0
ParamExplosionChargeOn = 0.0
ParamExplosionLightCharge = 0.0
ParamExplosionOn = 0.0
ParamExplosion = 0.0
ParamRabbitX = 0.0
ParamRabbitY = 1.0
ParamRabbitRotate = 0.0
ParamRabbitEliminationEffect = 0.0
ParamRabbitAppearance = 0.0
ParamRabbitSize = 0.0
ParamRabbitDraworder = 0.0
ParamRabbitEar = 0.0
Param5 = 0.0
ParamRabbitLight = 0.0
ParamRabbitLightSize = 0.0
ParamAuraOn = 0.0
ParamAura = 0.0
ParamAuraColor1 = 0.0
ParamAuraColor2 = 0.0
ParamHeartLightOn = 0.0
ParamHeartLight = 0.0
ParamHeartLightColor = 0.0
ParamHealLightOn = 0.0
ParamHealLight = 0.0
ParamStrengthenLightOn = 0.0
ParamStrengthenLight = 0.0
ParamStrengthenLightMove = 0.0
ParamMagicPositionX = 0.0
ParamMagicPositionY = 0.0
ParamAllColor1 = 0.0
ParamAllColor2 = 0.0
PartCore = 1.0
Part = 1.0
Part2 = 1.0
PartInk = 1.0
PartSmoke = 1.0
PartExplosionLight = 1.0
Partaura = 1.0
PartLight = 1.0
PartHeart = 1.0
PartHat = 1.0
PartHairSide = 1.0
PartHairFront = 1.0
PartHairBack = 1.0
PartBrow = 1.0
PartEye = 1.0
PartCheek = 1.0
PartNose = 1.0
PartMouth = 1.0
PartFace = 1.0
PartEar = 1.0
PartNeck = 1.0
PartRobe = 1.0
PartHoodie = 1.0
PartLeg = 1.0
PartArmLA = 1.0
PartArmRA = 1.0
PartArmLB = 0.0
PartArmRB = 0.0
PartEyeBall = 1.0
PartWandA = 1.0
PartWandB = 1.0
disable_3d = true
transparent_bg = true
gui_disable_input = true
size = Vector2i(700, 700)
render_target_update_mode = 4

[node name="Live2dVideoPlayer" type="VideoStreamPlayer" parent="Ui/PlayerControl/Player"]
material = ExtResource("16_3c6c7")
clip_contents = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -770.0
offset_right = 320.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 0
stream = ExtResource("18_q463u")
autoplay = true
expand = true

[node name="MenuPanel" type="PanelContainer" parent="Ui"]
visible = false
custom_minimum_size = Vector2(1100, 600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -300.0
offset_right = 550.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tshxl")

[node name="Animation" parent="Ui/MenuPanel" instance=ExtResource("17_5xmvy")]

[node name="Rest" type="Node2D" parent="Ui/MenuPanel" groups=["ButtonMenu"]]
visible = false
script = ExtResource("12_ktm7g")

[node name="Lessons" type="Node2D" parent="Ui/MenuPanel" groups=["ButtonMenu"]]
visible = false
script = ExtResource("12_sb63u")

[node name="Work" type="Node2D" parent="Ui/MenuPanel" groups=["ButtonMenu"]]
visible = false
script = ExtResource("20_derlk")

[node name="Shop" type="Node2D" parent="Ui/MenuPanel" groups=["ButtonMenu"]]
visible = false
script = ExtResource("22_prvwr")

[node name="Walk" type="Node2D" parent="Ui/MenuPanel" groups=["ButtonMenu"]]
visible = false
script = ExtResource("21_psxgd")

[node name="Tower" type="VBoxContainer" parent="Ui/MenuPanel"]
visible = false
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Ui/MenuPanel/Tower"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnterTowerButton" type="Button" parent="Ui/MenuPanel/Tower"]
layout_mode = 2
size_flags_horizontal = 0
text = "Enter Tower"

[node name="CloseButton" type="Button" parent="Ui/MenuPanel"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_fwgbm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_in7em")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_80aij")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_en1ia")
theme_override_styles/focus = SubResource("StyleBoxEmpty_apv3e")
icon = ExtResource("25_dofej")
icon_alignment = 2
vertical_icon_alignment = 0
expand_icon = true

[node name="Skip" type="CheckBox" parent="Ui/MenuPanel"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_nc7hd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2w8ax")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_h24mw")
theme_override_styles/hover = SubResource("StyleBoxEmpty_46vva")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_x7l7x")
theme_override_styles/focus = SubResource("StyleBoxEmpty_r8es6")
text = "Skip"

[node name="Stats" type="HBoxContainer" parent="Ui/MenuPanel"]
visible = false
layout_mode = 2
mouse_filter = 2
script = ExtResource("25_7vaom")

[node name="Stats" type="Label" parent="Ui/MenuPanel/Stats"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "StatLabel"
label_settings = SubResource("LabelSettings_icocv")

[node name="Stats2" type="Label" parent="Ui/MenuPanel/Stats"]
texture_filter = 4
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "StatLabel"
label_settings = SubResource("LabelSettings_icocv")

[node name="DialogicPanel" type="PanelContainer" parent="Ui"]
visible = false
custom_minimum_size = Vector2(1500, 850)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -150.0
offset_right = 600.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tshxl")

[node name="DialogicViewportContainer" parent="Ui/DialogicPanel" instance=ExtResource("26_25225")]
visible = false
layout_mode = 2

[node name="LeftMenuContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 1460.0
offset_top = 200.0
offset_right = 1600.0
offset_bottom = 900.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MenuPanel" type="Control" parent="LeftMenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftMenuContainer/MenuPanel"]
layout_mode = 2
offset_right = 140.0
offset_bottom = 700.0

[node name="Jobs" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Work"

[node name="Classes" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Lessons"

[node name="Rest" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rest"

[node name="Inventory" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Inventory"

[node name="Shop" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Shop"

[node name="Battle" type="Button" parent="LeftMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="RightMenuContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 900.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="MenuPanel" type="Control" parent="RightMenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RightMenuContainer/MenuPanel"]
layout_mode = 2
offset_right = 140.0
offset_bottom = 700.0

[node name="Stats" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Stats"

[node name="Background" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Background"

[node name="Skills" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Skills"

[node name="Walk" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Walk"

[node name="Shop" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Tower"

[node name="Battle" type="Button" parent="RightMenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Battle"

[connection signal="pressed" from="Ui/MenuPanel/Tower/EnterTowerButton" to="." method="_on_enter_tower_button_pressed"]
[connection signal="pressed" from="Ui/MenuPanel/CloseButton" to="." method="_on_close_button_pressed"]

[editable path="GUI (Mouse Ignore)/Counters/mood"]
[editable path="GUI (Mouse Ignore)/Counters/level"]
[editable path="GUI (Mouse Ignore)/Counters/experience"]
[editable path="GUI (Mouse Ignore)/Counters/scholarship"]
